[gd_scene load_steps=73 format=3 uid="uid://p8pwou4yywv0"]

[ext_resource type="Script" path="res://Personagens/Player/player.gd" id="1_4ntmi"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_l8h54"]
load_path = "res://.godot/imported/Attack1_Teste.png-31960e92c5fea3f2de8d50ab13f487a3.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_o28un"]
atlas = SubResource("CompressedTexture2D_l8h54")
region = Rect2(0, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n471f"]
atlas = SubResource("CompressedTexture2D_l8h54")
region = Rect2(160, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7emwf"]
atlas = SubResource("CompressedTexture2D_l8h54")
region = Rect2(320, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hshwv"]
atlas = SubResource("CompressedTexture2D_l8h54")
region = Rect2(480, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpjlu"]
atlas = SubResource("CompressedTexture2D_l8h54")
region = Rect2(640, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mwp6"]
atlas = SubResource("CompressedTexture2D_l8h54")
region = Rect2(800, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qemgg"]
atlas = SubResource("CompressedTexture2D_l8h54")
region = Rect2(960, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8viyr"]
atlas = SubResource("CompressedTexture2D_l8h54")
region = Rect2(1120, 0, 160, 128)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4ntmi"]
load_path = "res://.godot/imported/Grab_Teste (1).png-54c81b93d2de48d6982870a35095ee43.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_gu6f8"]
atlas = SubResource("CompressedTexture2D_4ntmi")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpta"]
atlas = SubResource("CompressedTexture2D_4ntmi")
region = Rect2(256, 0, 128, 128)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_btcbx"]
load_path = "res://.godot/imported/Hurt_Teste.png-81d50d1eda02fd6f7dfd767606f4a634.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_qs4pp"]
atlas = SubResource("CompressedTexture2D_btcbx")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_iyprq"]
atlas = SubResource("CompressedTexture2D_btcbx")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4lon"]
atlas = SubResource("CompressedTexture2D_btcbx")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ynux"]
atlas = SubResource("CompressedTexture2D_btcbx")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_d30e8"]
atlas = SubResource("CompressedTexture2D_btcbx")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pogt"]
atlas = SubResource("CompressedTexture2D_btcbx")
region = Rect2(576, 0, 96, 96)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gwnis"]
load_path = "res://.godot/imported/Idle_Teste.png-e80ef592c4b9de3856a6fb67a87b3b32.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ie76m"]
atlas = SubResource("CompressedTexture2D_gwnis")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dy65m"]
atlas = SubResource("CompressedTexture2D_gwnis")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_maysp"]
atlas = SubResource("CompressedTexture2D_gwnis")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1l10g"]
atlas = SubResource("CompressedTexture2D_gwnis")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rl0i"]
atlas = SubResource("CompressedTexture2D_gwnis")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x5p2"]
atlas = SubResource("CompressedTexture2D_gwnis")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eb1q"]
atlas = SubResource("CompressedTexture2D_gwnis")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvbyc"]
atlas = SubResource("CompressedTexture2D_gwnis")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvnt1"]
atlas = SubResource("CompressedTexture2D_gwnis")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kmt7"]
atlas = SubResource("CompressedTexture2D_gwnis")
region = Rect2(864, 0, 96, 96)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_k53q1"]
load_path = "res://.godot/imported/Jump_Teste.png-2b0f0183f420217282cb5bc0b26ca7c2.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_c4i3b"]
atlas = SubResource("CompressedTexture2D_k53q1")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvbbp"]
atlas = SubResource("CompressedTexture2D_k53q1")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v2uk"]
atlas = SubResource("CompressedTexture2D_k53q1")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6nl3"]
atlas = SubResource("CompressedTexture2D_k53q1")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hx1r"]
atlas = SubResource("CompressedTexture2D_k53q1")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qas3k"]
atlas = SubResource("CompressedTexture2D_k53q1")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntwt4"]
atlas = SubResource("CompressedTexture2D_k53q1")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdg72"]
atlas = SubResource("CompressedTexture2D_k53q1")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_apopc"]
atlas = SubResource("CompressedTexture2D_k53q1")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5htga"]
atlas = SubResource("CompressedTexture2D_k53q1")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5o4e"]
atlas = SubResource("CompressedTexture2D_k53q1")
region = Rect2(576, 0, 96, 96)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fhl08"]
load_path = "res://.godot/imported/Fall_Teste.png-e4b483636c999abab235083717f67483.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_pisgm"]
atlas = SubResource("CompressedTexture2D_fhl08")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ygp"]
atlas = SubResource("CompressedTexture2D_fhl08")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm0op"]
atlas = SubResource("CompressedTexture2D_fhl08")
region = Rect2(192, 0, 96, 96)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vtle1"]
load_path = "res://.godot/imported/Run_Teste.png-e211dcfdf23bdf1f3a0ece7234768cfd.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_mdkl3"]
atlas = SubResource("CompressedTexture2D_vtle1")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_68syb"]
atlas = SubResource("CompressedTexture2D_vtle1")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0uyb"]
atlas = SubResource("CompressedTexture2D_vtle1")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8nak"]
atlas = SubResource("CompressedTexture2D_vtle1")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqfba"]
atlas = SubResource("CompressedTexture2D_vtle1")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgaa7"]
atlas = SubResource("CompressedTexture2D_vtle1")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfyh2"]
atlas = SubResource("CompressedTexture2D_vtle1")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_soeee"]
atlas = SubResource("CompressedTexture2D_vtle1")
region = Rect2(672, 0, 96, 96)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_od3ui"]
load_path = "res://.godot/imported/Shoot_Teste.png-ccd5242263a98e098e9e78d7c58c8ebb.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_o5r0w"]
atlas = SubResource("CompressedTexture2D_od3ui")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qns6m"]
atlas = SubResource("CompressedTexture2D_od3ui")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fatyj"]
atlas = SubResource("CompressedTexture2D_od3ui")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_32uw3"]
atlas = SubResource("CompressedTexture2D_od3ui")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac8n6"]
atlas = SubResource("CompressedTexture2D_od3ui")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bga3"]
atlas = SubResource("CompressedTexture2D_od3ui")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhliw"]
atlas = SubResource("CompressedTexture2D_od3ui")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_11wp0"]
atlas = SubResource("CompressedTexture2D_od3ui")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_11slg"]
atlas = SubResource("CompressedTexture2D_od3ui")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7sh4"]
atlas = SubResource("CompressedTexture2D_od3ui")
region = Rect2(864, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_l8h54"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o28un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n471f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7emwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hshwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpjlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mwp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qemgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8viyr")
}],
"loop": false,
"name": &"attack_animation",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu6f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpta")
}],
"loop": false,
"name": &"grab_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs4pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iyprq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4lon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ynux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d30e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pogt")
}],
"loop": true,
"name": &"hurt_animation",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ie76m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dy65m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maysp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1l10g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rl0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x5p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eb1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvbyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvnt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kmt7")
}],
"loop": true,
"name": &"idle_animation",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4i3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvbbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v2uk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6nl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hx1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qas3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntwt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdg72")
}],
"loop": false,
"name": &"jump_animation_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apopc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5o4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pisgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ygp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm0op")
}],
"loop": true,
"name": &"jump_animation_2",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdkl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68syb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0uyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8nak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqfba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgaa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfyh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soeee")
}],
"loop": true,
"name": &"run_animation",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5r0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qns6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fatyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32uw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac8n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bga3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhliw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11wp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11slg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7sh4")
}],
"loop": true,
"name": &"shoot_animation",
"speed": 16.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_00tjw"]
radius = 9.0
height = 58.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_00tjw"]
size = Vector2(22, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_apopc"]
size = Vector2(23, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x3vf3"]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_4ntmi")
SPEED = 350
JUMP = -410

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -32)
sprite_frames = SubResource("SpriteFrames_l8h54")
animation = &"attack_animation"
autoplay = "idle_animation"
frame = 7
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -29)
shape = SubResource("CapsuleShape2D_00tjw")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Grab_Trigger" type="CollisionShape2D" parent="."]
position = Vector2(0, -59)
shape = SubResource("RectangleShape2D_00tjw")
one_way_collision = true
one_way_collision_margin = 10.9

[node name="TopCheck" type="ShapeCast2D" parent="."]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_apopc")
target_position = Vector2(0, 1)

[node name="WallCheck" type="ShapeCast2D" parent="."]
position = Vector2(0, -26)
shape = SubResource("RectangleShape2D_x3vf3")
target_position = Vector2(0, -12)

[node name="FloorCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 10)
